$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

01-June-2012 Jean-Marie Simonet
 # [#28589] *ACL regression in com_search
 # [#28588] *ACL regression in com_messages
 # [#28587] *ACL regression in com_redirect
 # [#28579] Fix xreference regression from 1.7 to 2.5. Thanks Andrea.
 # [#28561] Move some JFormFields from the platform to the CMS. Thanks Rouven.
 
30-May-2012 Jean-Marie Simonet
 $ Missing language string
 $ Updating installation ini files: et-EE, mn-MN

29-May-2012 Jean-Marie Simonet
 # [#28566] Update TinyMCE 3.5.1.1. Thanks Rouven

28-May-2012 Jean-Marie Simonet
 # [#28572] *Administration user notes checked on notes page gives warning arugment missing
 ^ [#28370] Get rid of assign() uses in view: admin + site.Thanks Ofer and Rouven
 ^ [#28442] Update Library Manifests. Thanks Michael.

27-May-2012 Jean-Marie Simonet
 # [#28022] Smart search and unpublished Content Maps fails after edit of an article.Thanks Michael.
 $ [#28571] Typo in en-GB.com_templates.ini. Thanks Stella.
 ^ [#28569] Correct docblocs in com_joomlaupdate. Thanks Rouven.

25-May-2012 Jean-Marie Simonet
 $ Updating installation ini file: ug-CN
 $ Adding new installation language: hi-IN

23-May-2012 Jean-Marie Simonet
 ^ [#28547] ACL consistency - Use the API and access.xml everywhere. Thanks Michael.
 # [#28483] *Weblinks module should only pass on category related queries when catid > 0

22-May-2012 Jean-Marie Simonet
 # [#28555] Fix files that are CRLF. Thanks Rouven.

21-May-2012 Jean-Marie Simonet
 # [#21946] Reverting [#27700]
 ^ [#28553] Improve code for 28205. Thanks Rouven.

20-May-2012 Jean-Marie Simonet
 # [#28546] Trunk is broken due to a PHP error in JComponentHelper
 # [#28521] Use doExecute instead of execute in CLI scripts. Thanks Michael.
 $ Updating installation ini files: az-AZ, tr-TR, zh-TW

19-May-2012 Jean-Marie Simonet
 # [#28419] Remove warnings for undeprecated code. Fix a bug in JView in the process. Thanks Rouven.
