@@ -114,19 +114,24 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
 					</td>
 					<?php endif; ?>
 
-				<?php if ($this->params->get('list_show_author', 1) && !empty($article->author )) : ?>
-							<td class="list-author">
-								<?php $author =  $article->author ?>
-								<?php $author = ($article->created_by_alias ? $article->created_by_alias : $author);?>
+					<<?php if ($this->params->get('list_show_author', 1)) : ?>
+					<td class="list-author">
+						<?php if(!empty($article->author) || !empty($article->created_by_alias)) : ?>
+							<?php $author =  $article->author ?>
+							<?php $author = ($article->created_by_alias ? $article->created_by_alias : $author);?>
 
-									<?php if (!empty($article->contactid ) &&  $this->params->get('link_author') == true):?>
-										<?php 	echo
-										 JHtml::_('link', JRoute::_('index.php?option=com_contact&view=contact&id='.$article->contactid), $author); ?>
+							<?php if (!empty($article->contactid ) &&  $this->params->get('link_author') == true):?>
+								<?php echo JHtml::_(
+										'link',
+										JRoute::_('index.php?option=com_contact&view=contact&id='.$article->contactid),
+										$author
+								); ?>
 
-									<?php else :?>
-										<?php echo JText::sprintf('COM_CONTENT_WRITTEN_BY', $author); ?>
-									<?php endif; ?>
-							</td>
+							<?php else :?>
+								<?php echo JText::sprintf('COM_CONTENT_WRITTEN_BY', $author); ?>
+							<?php endif; ?>
+						<?php endif; ?>
+					</td>
 					<?php endif; ?>
 
 					<?php if ($this->params->get('list_show_hits', 1)) : ?>
